<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Search -->
    <item
        android:id="@+id/action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search_option_text"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search" />

    <!--  Sell Option -->
    <item
        android:id="@+id/sell_option"
        android:showAsAction="never"
        android:title="@string/sell_option_text" />

    <!--  Review Option -->
    <item
        android:id="@+id/review_option"
        android:showAsAction="never"
        android:title="@string/review_option_text"/>

    <!--  Refine Option -->
    <item
            android:id="@+id/refine_option"
            android:showAsAction="never"
            android:title="@string/refine_option_text"/>

    <!--  Settings Option -->
    <item
            android:id="@+id/settings_option"
            android:showAsAction="never"
            android:title="@string/settings_option_text"/>

</menu>