<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/titleTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titleHint"
            android:inputType="textCapWords" >
        </EditText>

        <!-- Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/descriptionTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minLines="1"
            android:hint="@string/descriptionHint"
            android:inputType="textCapSentences|textMultiLine" >
        </EditText>

         <!-- Price -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <EditText
            android:id="@+id/priceTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minLines="1"
            android:inputType="number" >
        </EditText>
        
        <!-- Photos -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/photosTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photos" />

            <ImageButton
                android:id="@+id/takePhotoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/takePhotoButtonDescription"
                android:onClick="takePhoto"
                android:src="@drawable/camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <ImageView
                android:id="@+id/photoView1"
                android:layout_width="96dp"
                android:layout_height="128dp"
                android:layout_margin="1dp"
                android:contentDescription="@string/photoViewDescription"
                android:src="@drawable/camera" />

            <ImageView
                android:id="@+id/photoView2"
                android:layout_width="96dp"
                android:layout_height="128dp"
                android:layout_margin="1dp"
                android:contentDescription="@string/photoViewDescription"
                android:src="@drawable/camera" />

            <ImageView
                android:id="@+id/photoView3"
                android:layout_width="96dp"
                android:layout_height="128dp"
                android:layout_margin="1dp"
                android:contentDescription="@string/photoViewDescription"
                android:src="@drawable/camera" />
        </LinearLayout>

        <!-- Phone Number -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber" />

        <EditText
            android:id="@+id/phoneNumberTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" >
        </EditText>

        <!-- Location -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <EditText
            android:id="@+id/locationTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords" >
        </EditText>

		<!-- Button -->
        <Button
            android:id="@+id/ButtonSellItem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonSellItem"
            android:text="@string/button_sell_item"
            android:textColor="#ffffff"
            android:background="#669900">
        </Button>
    </LinearLayout>

</ScrollView>